# CNN_MODEL_APP

./: CMakeLists.txt  README.md
Test_Operators/: test.cpp
configs/: layer_1_config.json  layer_2_config.json  layer_3_config.json  layer_4_config.json  layer_5_config.json  layer_6_config.json  layer_7_config.json  layer_8_config.json
data/input/: input_data.json
data/output/: output_conv1.json  output_conv2.json  output_conv3.json  output_dense1.json  output_dense2.json  output_flat.json  output_pool1.json  output_pool2.json
data/test/conv_test/: test_1_config.json  test_1_ref.json  test_1_weight.json  test_2_config.json  test_2_ref.json  test_2_weight.json  test_3_config.json  test_3_ref.json  test_3_weight.json  test_4_config.json  test_4_ref.json  test_input_1_data.json  test_input_2_data.json  test_input_3_data.json  test_input_4_data.json  test_output_1_data.json  test_output_2_data.json  test_output_3_data.json  test_output_4_data.json
data/test/dense_test/: test_1_config.json  test_1_ref.json  test_2_config.json  test_2_ref.json  test_2_weight.json  test_3_config.json  test_3_ref.json  test_4_config.json  test_4_ref.json  test_4_weight.json  test_input_1.json  test_input_2.json  test_input_3.json  (+5 more)
data/weights/: layer_1_weight.json  layer_3_weight.json  layer_5_weight.json  layer_8_weight.json
operators/include/: conv.h  dense.h  flattern.h  max_pooling.h  relu.h  softmax.h
operators/src/: conv.cpp  dense.cpp  flattern.cpp  max_pooling.cpp  relu.cpp  softmax.cpp
src/: main.cpp
utilities/include/: read_data.h
utilities/src/: read_data.cpp
